# dim

./: .clang-format  .gitignore  CMakeLists.txt  DimLibVersion.cmake  README.md  serialization.md  todo  todo.txt
.github/workflows/: cmake_single_platform.yml  static.yml
cmake/: DimConfig.cmake.in
dim/: base.hpp  dynamic_quantity.hpp  io_detail.hpp  si.hpp  si_nostream.hpp  system_creation_helper.hpp
dim/si/: definition.hpp  io.cpp  io.hpp  io_stream.cpp  literal.hpp  parse_unit.cpp  quantity.lex.cpp  quantity.lex.hpp  quantity.output  quantity.tab.cpp
dim/si/parser/: Makefile  quantity.l  quantity.y
doc/: Doxyfile
doc/html/: annotated.html  annotated_dup.js  classdim_1_1formatted__quantity-members.html  classdim_1_1formatted__quantity.html  classdim_1_1quantity-members.html  classdim_1_1quantity.html  classdim_1_1quantity.js  classdim_1_1quantity__coll__graph.map  classdim_1_1quantity__facet-members.html  classdim_1_1quantity__facet.html  classdim_1_1quantity__facet.js  classdim_1_1quantity__facet__inherit__graph.map  classdim_1_1quantity__facet__inherit__graph.md5  classdim_1_1quantity__inherit__graph.md5  classes.html  definition_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_69a65cc6eff3ffa8a2bf9f4695a29851.html  dir_69a65cc6eff3ffa8a2bf9f4695a29851.js  dir_c70999733ebe5fe71f03be0878da756e.html  dir_c70999733ebe5fe71f03be0878da756e.js  dynamic__quantity_8hpp_source.html  files.html  functions.html  functions_func.html  functions_rela.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  (+89 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  pages_0.js  related_0.js  searchdata.js  (+3 more)
docs/: annotated.html  annotated_dup.js  base_8hpp_source.html  classdim_1_1dynamic__quantity-members.html  classdim_1_1dynamic__quantity.html  classdim_1_1dynamic__quantity__coll__graph.map  classdim_1_1dynamic__quantity__coll__graph.md5  classdim_1_1dynamic__quantity__inherit__graph.map  classdim_1_1dynamic__unit-members.html  classdim_1_1dynamic__unit.html  classdim_1_1dynamic__unit.js  classdim_1_1dynamic__unit__coll__graph.map  classdim_1_1dynamic__unit__coll__graph.md5  classdim_1_1formatted__quantity-members.html  classdim_1_1formatted__quantity.html  classdim_1_1formatted__quantity.js  classdim_1_1formatter-members.html  classdim_1_1formatter.html  classdim_1_1formatter.js  classdim_1_1incommensurable__exception-members.html  classdim_1_1incommensurable__exception.html  classdim_1_1incommensurable__exception__coll__graph.map  classdim_1_1incommensurable__exception__coll__graph.md5  classdim_1_1input__format__map-members.html  classdim_1_1input__format__map.html  classdim_1_1input__format__map.js  classdim_1_1input__format__map__group-members.html  classdim_1_1input__format__map__group.html  classdim_1_1input__format__map__group.js  classdim_1_1output__format__map-members.html  classdim_1_1output__format__map.html  classdim_1_1output__format__map.js  classdim_1_1quantity-members.html  classdim_1_1quantity.html  classdim_1_1quantity.js  classdim_1_1quantity__coll__graph.map  classdim_1_1quantity__facet-members.html  classdim_1_1quantity__facet.html  classdim_1_1quantity__facet.js  classdim_1_1quantity__facet__coll__graph.md5  (+174 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+34 more)
doxygen/: Advanced.md  Basics.md  Doxyfile  KnownSymbols.md  MigrationV1to2.md  Serialization.md
example/: CMakeLists.txt  advanced.cpp  quickstart.cpp
src/: CMakeLists.txt  config.hpp.in
src/dim/: base.hpp  dynamic_quantity.hpp  facet.hpp  format_map.cpp  format_map.hpp  incommensurable_exception.hpp  io.cpp  io.hpp  io_detail.hpp  io_format.hpp  io_stream.cpp  io_stream.hpp  ioformat.hpp  iostream.hpp  quantity.hpp  quantity_facet.hpp  si.hpp  si_no_stream.hpp  si_nostream.hpp  system_creation_helper.hpp  tag.hpp  unit.hpp
src/dim/si/: definition.cpp  definition.hpp  literal.hpp  parse_unit.cpp  parse_unit.hpp  quantity.lex.cpp  quantity.lex.hpp  quantity.output  quantity.tab.cpp  quantity.tab.hpp  quantity_parser_driver.hpp  si_facet.cpp  si_facet.hpp  si_io.cpp  si_io.hpp  si_io_stream.cpp  si_quantity_facet.cpp  si_quantity_facet.hpp
src/dim/si/parser/: Makefile  quantity.l  quantity.y
test/: CMakeLists.txt  compile_errors.cpp  dynamic_test.cpp  facet_test.cpp  format_map_test.cpp  format_test.cpp  formatter_test.cpp  io_stream_test.cpp  io_test.cpp  iostream_test.cpp  literal.cpp  literal_test.cpp  parse_timing.cpp  parser_test.cpp  quantity_test.cpp  si.cpp  si_io.cpp  si_io_test.cpp  si_test.cpp  test_utilities.cpp  test_utilities.hpp
